fix: gap in nav on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ h4 {
 }
 
 .header-bg {
-  background-image: url("../assets/images/bg-fone.png");
+  background-image: url("../../assets/images/bg-fone.png");
   background-attachment: fixed;
   background-size: cover;
   background-position: 0 -53px;
@@ -703,6 +703,11 @@ h4 {
 .nav {
   display: flex;
   gap: 48px;
+}
+@media (max-width: 48em) {
+  .nav {
+    gap: 25px;
+  }
 }
 
 .header__nav {
